resources/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: slack-formatter
spec:
  replicas: 1
  selector:
    app: slack-formatter
  template:
    metadata:
      labels:
        app: slack-formatter
    spec:
      containers:
        - name: slack-formatter
          image: slack-formatter:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - slack-formatter
        from:
          kind: ImageStreamTag
          name: slack-formatter:latest
