resources/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: slack-formatter
    app.kubernetes.io/component: slack-formatter
    app.kubernetes.io/instance: slack-formatter
  name: slack-formatter
spec:
  port:
    targetPort: 8000
  tls:
    termination: edge
  to:
    kind: Service
    name: slack-formatter
    weight: 100
  wildcardPolicy: None
